hermes_fuzz_executed/fuzz_89_execution
'use strict';
let a = {};
a = {foo: async function a() {
    let b, c, res;
    b = await Promise.resolve();
    ['a', 'b', 'c'].forEach(async item => {
        await Promise.resolve();
        c = await Promise.resolve(item);
        res = await Promise.resolve();
    });
    return c + b;
}};
a;
a;
a;
 
 
 
 
 
 
 
 
 
 
 
 


Execution Output ------------------:
test.js:5:15: warning: the variable "Promise" was not declared in function "?anon_0_?anon_0_a"
    b = await Promise.resolve();
              ^~~~~~~
test.js:6:29: error: async functions are unsupported
    ['a', 'b', 'c'].forEach(async item => {
                            ^~~~~~~~~~~~~~~
Emitted 1 errors. exiting.
